--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -14,6 +14,7 @@
   --second-bg-color: #323946;
   --text-color: #fff;
   --main-color: #0ef;
+  --second-main-color: #067a9b;
 }
 
 html {
@@ -29,6 +30,7 @@ body {
 section {
   min-height: 100vh;
   padding: 10rem 9% 2rem;
+
 }
 
 span {
