--- a/src/styles/components/Home.css
+++ b/src/styles/components/Home.css
@@ -2,7 +2,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 8rem;
 }
+
+.home-content {
+  position: relative;
+  padding-left: 2rem;
+  border-left: 0.3rem solid #fff;
+  /* Outer border */
+  border-left: 0.3rem double #ddd;
+  /* Inner double border */
+}
+
 
 .home-content h3 {
   font-size: 3.2rem;
@@ -16,11 +27,13 @@
 .home-content h1 {
   font-size: 5.6rem;
   font-weight: 700;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 
 .home-content p {
   font-size: 1.6rem;
+  line-height: 2rem;
+
 }
 
 .social-media a {
@@ -45,7 +58,9 @@
 }
 
 .portfolio-image img {
-  width: 30vw;
+  width: 25vw;
+  border-radius: 50%;
+  box-shadow: 0 1rem 1.5rem var(--main-color);
 }
 
 .btn {
