--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -12,6 +12,7 @@
 :root {
   --bg-color: #1f242d;
   --second-bg-color: #323946;
+  --third-bg-color: #161e2a;
   --text-color: #fff;
   --main-color: #0ef;
   --second-main-color: #067a9b;
@@ -35,4 +36,55 @@ section {
 
 span {
   color: var(--main-color);
+}
+
+/*Breakpoints */
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 991px) {
+  .header {
+    padding: 2rem 3%;
+  }
+
+  section {
+    padding: 10rem 3% 2rem
+  }
+
+  .services-section {
+    padding-bottom: 7rem;
+  }
+
+  .portfolio-section {
+    padding-bottom: 7rem;
+  }
+
+  .contact-section {
+    padding-bottom: 7rem;
+  }
+
+  .footer {
+    padding: 2rem 3%;
+  }
+}
+
+
+@media(max-width:450px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media(max-width:365px) {
+  .portfolio-image img {
+    max-width: 90vw;
+  }
+
+  .about-image img {
+    max-width: 90vw;
+  }
 }
