--- a/src/styles/components/Home.css
+++ b/src/styles/components/Home.css
@@ -61,6 +61,21 @@
   width: 25vw;
   border-radius: 50%;
   box-shadow: 0 1rem 1.5rem var(--main-color);
+  animation: floatImage 4s ease-in-out infinite;
+}
+
+@keyframes floatImage {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-2.4rem);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .btn {
@@ -79,4 +94,28 @@
 
 .btn:hover {
   box-shadow: none;
+}
+
+@media(max-width:768px) {
+  .home-section {
+    flex-direction: column;
+  }
+
+  .home-content {
+    border: none;
+  }
+
+  .portfolio-image img {
+    width: 70vw;
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+  }
+
+  .home-content h3 {
+    font-size: 2.6rem;
+  }
+
+  .home-content h1 {
+    font-size: 5rem;
+  }
 }
