--- a/src/styles/components/Projects.css
+++ b/src/styles/components/Projects.css
@@ -74,3 +74,20 @@
   font-size: 1.5rem;
   color: var(--second-bg-color);
 }
+
+
+@media(max-width:768px) {
+  .section-projects h2 {
+    margin-bottom: 3rem;
+  }
+
+  .projects-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media(max-width:617px) {
+  .projects-container {
+    grid-template-columns: 1fr;
+  }
+}
